--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "sass": "^1.71.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
